--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "lucide-react": "^0.575.0",
-    "mysql2": "^3.17.4",
+    "mongodb": "^7.1.0",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
